--- a/index.html
+++ b/index.html
@@ -27,3 +27,34 @@
         </ul>
     </nav>
     <img src= "C:\Users\rodri\OneDrive\Desktop\HTML\pic 1.jpg" class="pic">
+    
+    <b1 class="b1"> Hello There, Thank You for visiting my page my name is Timmy Akinsehinwa</b1>
+    
+    <div class="container">
+    <b2 class=" b2">I am a <span class="auto-type"></span></b2>
+    </div>
+
+
+    <script src="https://unpkg.com/typed.js@2.0.132/dist/typed.umd.js"></script>
+
+    <script>
+        var typed = new Typed(".auto-type", {
+            strings: ["Coder", "Software Engineer", "Computer Scientist"],
+            typeSpeed: 30,
+            backSpeed: 40,
+            loop: true
+        })
+
+
+    </script>
+
+<div class= "bi">
+<b3 class="b3"> I am currently a student at the University of Northampton studying Computer Science. This page was a project for my Web Development Module.</b3>
+<b4 class="b4"> This Page was made Using HTML and CSS which was taught to me by my lecturer Chris Raffetery.
+    Please Feel free to Explore my site.
+</b4>
+</div>>
+
+
+</body>
+</html>
